--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -2,6 +2,15 @@
   <canvas id="canvas" width="500px" height="200px">{{ chart }}</canvas>
 </div-->
 
+<ngx-spinner
+  bdColor="#fff"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <!--<p style="font-size: 20px; color: white">Loading...</p>-->
+</ngx-spinner>
+
 <div>
   <div class="row pr-1 pl-1 mt-1">
     <div class="col-md-12 col-sm-12">
