--- a/src/app/profile/change_password.html
+++ b/src/app/profile/change_password.html
@@ -2,28 +2,83 @@
   <p>{{ _translation('Change password', langCode) }}</p>
   <mat-form-field>
     <mat-label>{{ _translation('Current password', langCode) }}</mat-label>
-    <input [type]="showPassword == true ? 'text': 'password'" matInput required name="currentPassword" [(ngModel)]="data.currentPassword">
+    <input [type]="showPassword == true ? 'text': 'password'" matInput required name="currentPassword"
+           [(ngModel)]="data.currentPassword">
     <mat-icon *ngIf="showPassword === false" matSuffix (click)="toogleShowPassword()">visibility_off</mat-icon>
     <mat-icon *ngIf="showPassword === true" matSuffix (click)="toogleShowPassword()">visibility</mat-icon>
   </mat-form-field>
   <mat-form-field>
     <mat-label>{{ _translation('New password', langCode) }}</mat-label>
-    <input [type]="showPassword == true ? 'text': 'password'" matInput required name="newPassword" [(ngModel)]="data.newPassword">
+    <input [type]="showPassword == true ? 'text': 'password'" matInput required name="newPassword"
+           [(ngModel)]="data.newPassword" (ngModelChange)="checkPasswordStrength($event)">
     <mat-icon *ngIf="showPassword === false" matSuffix (click)="toogleShowPassword()">visibility_off</mat-icon>
     <mat-icon *ngIf="showPassword === true" matSuffix (click)="toogleShowPassword()">visibility</mat-icon>
   </mat-form-field>
+  <div *ngIf="data.newPassword" class="passwordStrengthInfo" class="text-left ml-1 mr-1">
+    <p *ngIf="!isUpper" class="red"><i class="material-icons">
+      cancel
+    </i> {{ _translation('Contains at least one upper character', langCode) }}
+    </p>
+    <p *ngIf="isUpper" class="green"><i class="material-icons">
+      done
+    </i> {{ _translation('Contains at least one upper character', langCode) }}
+    </p>
+    <p *ngIf="!isLower" class="red"><i class="material-icons">
+      cancel
+    </i> {{ _translation('Contains at least one lower character', langCode) }}
+    </p>
+    <p *ngIf="isLower" class="green"><i class="material-icons">
+      done
+    </i> {{ _translation('Contains at least one lower character', langCode) }}
+    </p>
+    <p *ngIf="!isSpec" class="red"><i class="material-icons">
+      cancel
+    </i> {{ _translation('Contains at least one special character', langCode) }}
+    </p>
+    <p *ngIf="isSpec" class="green"><i class="material-icons">
+      done
+    </i> {{ _translation('Contains at least one special character', langCode) }}
+    </p>
+    <p *ngIf="!isDigit" class="red"><i class="material-icons">
+      cancel
+    </i> {{ _translation('Contains at least one digit character', langCode) }}
+    </p>
+    <p *ngIf="isDigit" class="green"><i class="material-icons">
+      done
+    </i> {{ _translation('Contains at least one digit character', langCode) }}
+    </p>
+    <p class="red" *ngIf="data.newPassword.length < 8 || data.newPassword.length > 25"><i
+      class="material-icons">
+      cancel
+    </i> {{ _translation('Contains between 8 and 25 characters', langCode) }}
+    </p>
+    <p class="green" *ngIf="data.newPassword.length > 7 && data.newPassword.length < 26"><i
+      class="material-icons">
+      done
+    </i> {{ _translation('Contains between 8 and 25 characters', langCode) }}
+    </p>
+    <mat-progress-bar mode="determinate" class="w-90" [value]="passwordStrength"></mat-progress-bar>
+  </div>
   <mat-form-field>
     <mat-label>{{ _translation('Confirm password', langCode) }}</mat-label>
-    <input [type]="showPassword == true ? 'text': 'password'" matInput required name="confirmPassword" [(ngModel)]="data.confirmPassword">
+    <input [type]="showPassword == true ? 'text': 'password'" matInput required name="confirmPassword"
+           [(ngModel)]="data.confirmPassword">
     <mat-icon *ngIf="showPassword === false" matSuffix (click)="toogleShowPassword()">visibility_off</mat-icon>
     <mat-icon *ngIf="showPassword === true" matSuffix (click)="toogleShowPassword()">visibility</mat-icon>
   </mat-form-field>
 </div>
 <div mat-dialog-actions class="w-100">
   <div class="w-50 m-auto text-center">
-    <button type="button" mat-raised-button class="btn-block w-90" cdkFocusInitial (click)="onNoClick()">{{ _translation('No Thanks', langCode) }}</button>
+    <button type="button" mat-raised-button class="btn-block w-90" cdkFocusInitial
+            (click)="onNoClick()">{{ _translation('No Thanks', langCode) }}</button>
   </div>
   <div class="w-50 m-auto text-center">
-    <button type="button" mat-raised-button color="primary" class="btn-block w-90" (click)="changePassword(data)">{{ _translation('Change', langCode) }}</button>
+    <button type="button" [disabled]="
+    data.currentPassword &&
+    data.newPassword &&
+    data.confirmPassword &&
+    passwordStrength === 100 &&
+    data.newPassword === data.confirmPassword? false: true" mat-raised-button color="primary" class="btn-block w-90"
+            (click)="changePassword(data)">{{ _translation('Change', langCode) }}</button>
   </div>
 </div>
