--- a/src/app/restart-password/restart-password.component.html
+++ b/src/app/restart-password/restart-password.component.html
@@ -9,7 +9,8 @@
       </mat-form-field>
     </div>
     <div class="text-center">
-      <button type="submit" mat-raised-button color="primary" class="btn-block">{{ _translation('Send activation key', langCode) }}</button>
+      <button type="submit" [disabled]="email ? false: true" mat-raised-button color="primary"
+              class="btn-block">{{ _translation('Send activation key', langCode) }}</button>
     </div>
   </form>
 
@@ -23,13 +24,15 @@
       </mat-form-field>
     </div>
     <div class="text-center mb-1">
-      <button type="submit" mat-raised-button color="primary" class="btn-block">{{ _translation('Activate', langCode) }}</button>
+      <button type="submit" [disabled]="code ? false: true" mat-raised-button color="primary"
+              class="btn-block">{{ _translation('Activate', langCode) }}</button>
     </div>
     <div class="text-center mb-1">
       <p>{{ _translation('If you didn\'t get restart password activation key please resend code again!', langCode) }}</p>
     </div>
     <div class="text-center">
-      <button type="button" mat-raised-button color="primary" class="btn-block" (click)="restartPassword(email)">{{ _translation('Resend code', langCode) }}</button>
+      <button type="button" mat-raised-button color="primary" class="btn-block"
+              (click)="restartPassword(email)">{{ _translation('Resend code', langCode) }}</button>
     </div>
   </form>
 
@@ -38,17 +41,68 @@
     <div>
       <mat-form-field class="w-100">
         <mat-label>{{ _translation('Enter new password', langCode) }}</mat-label>
-        <input type="password" matInput required name="newPassword" [(ngModel)]="newPassword">
-        <mat-icon matSuffix>lock</mat-icon>
+        <input [type]="showPassword == true ? 'text': 'password'" matInput required name="newPassword" [(ngModel)]="newPassword" (ngModelChange)="checkPasswordStrength($event)">
+        <mat-icon *ngIf="showPassword === false" matSuffix (click)="toogleShowPassword()">visibility_off</mat-icon>
+        <mat-icon *ngIf="showPassword === true" matSuffix (click)="toogleShowPassword()">visibility</mat-icon>
       </mat-form-field>
+      <div *ngIf="newPassword" class="passwordStrengthInfo" class="text-left ml-1 mr-1">
+        <p *ngIf="!isUpper" class="red"><i class="material-icons">
+          cancel
+        </i> {{ _translation('Contains at least one upper character', langCode) }}
+        </p>
+        <p *ngIf="isUpper" class="green"><i class="material-icons">
+          done
+        </i> {{ _translation('Contains at least one upper character', langCode) }}
+        </p>
+        <p *ngIf="!isLower" class="red"><i class="material-icons">
+          cancel
+        </i> {{ _translation('Contains at least one lower character', langCode) }}
+        </p>
+        <p *ngIf="isLower" class="green"><i class="material-icons">
+          done
+        </i> {{ _translation('Contains at least one lower character', langCode) }}
+        </p>
+        <p *ngIf="!isSpec" class="red"><i class="material-icons">
+          cancel
+        </i> C{{ _translation('Contains at least one special character', langCode) }}
+        </p>
+        <p *ngIf="isSpec" class="green"><i class="material-icons">
+          done
+        </i> {{ _translation('Contains at least one special character', langCode) }}
+        </p>
+        <p *ngIf="!isDigit" class="red"><i class="material-icons">
+          cancel
+        </i> {{ _translation('Contains at least one digit character', langCode) }}
+        </p>
+        <p *ngIf="isDigit" class="green"><i class="material-icons">
+          done
+        </i> {{ _translation('Contains at least one digit character', langCode) }}
+        </p>
+        <p class="red" *ngIf="newPassword.length < 8 || newPassword.length > 25"><i
+          class="material-icons">
+          cancel
+        </i> {{ _translation('Contains between 8 and 25 characters', langCode) }}
+        </p>
+        <p class="green" *ngIf="newPassword.length > 7 && newPassword.length < 26"><i
+          class="material-icons">
+          done
+        </i> {{ _translation('Contains between 8 and 25 characters', langCode) }}
+        </p>
+        <mat-progress-bar mode="determinate" class="w-90" [value]="passwordStrength"></mat-progress-bar>
+      </div>
       <mat-form-field class="w-100">
         <mat-label>{{ _translation('Confirm new password', langCode) }}</mat-label>
-        <input type="password" matInput required name="newPassword" [(ngModel)]="confirmPassword">
-        <mat-icon matSuffix>lock</mat-icon>
+        <input [type]="showPassword == true ? 'text': 'password'" matInput required name="newPassword" [(ngModel)]="confirmPassword">
+        <mat-icon *ngIf="showPassword === false" matSuffix (click)="toogleShowPassword()">visibility_off</mat-icon>
+        <mat-icon *ngIf="showPassword === true" matSuffix (click)="toogleShowPassword()">visibility</mat-icon>
       </mat-form-field>
     </div>
     <div class="text-center mb-1">
-      <button type="submit" mat-raised-button color="primary" class="btn-block">{{ _translation('Save new password', langCode) }}</button>
+      <button type="submit" [disabled]="
+      newPassword &&
+      confirmPassword &&
+      newPassword === confirmPassword ? false: true" mat-raised-button color="primary"
+              class="btn-block">{{ _translation('Save new password', langCode) }}</button>
     </div>
   </form>
 </div>
