--- a/src/app/restart-password/restart-password.component.scss
+++ b/src/app/restart-password/restart-password.component.scss
@@ -22,3 +22,19 @@
       }
   }
 }
+
+.passwordStrengthInfo {
+  font-size: 14px;
+
+  /deep/ .material-icons {
+    font-size: 14px !important;
+  }
+}
+
+.red {
+  color: darkred;
+}
+
+.green {
+  color: green;
+}
