--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,3 +1,11 @@
+<ngx-spinner
+  bdColor="#fff"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <!--<p style="font-size: 20px; color: white">Loading...</p>-->
+</ngx-spinner>
 <div class="settings p-2">
   <div>
     <h5 class="text-center">{{ _translation('Options', langCode) }}</h5>
