--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,3 +1,11 @@
+<ngx-spinner
+  bdColor="#fff"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <!--<p style="font-size: 20px; color: white">Loading...</p>-->
+</ngx-spinner>
 <div class="pl-2 pr-2" *ngIf="news.length > 0">
   <h3 class="w-100 text-center">News and information</h3>
   <div *ngFor="let n of news">
