--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,11 @@
+<ngx-spinner
+  bdColor="#fff"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <!--<p style="font-size: 20px; color: white">Loading...</p>-->
+</ngx-spinner>
 <div class="profile p-2">
   <div>
     <div class="row">
