copyrights on dashboard menu

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -48,3 +48,10 @@
 .app {
   cursor: pointer;
 }
+
+.copyright {
+  font-size: 12px;
+  /deep/ .material-icons {
+    font-size: 10px !important;
+  }
+}
