--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -20,7 +20,8 @@
     </mat-nav-list>
     <div class="text-center logout p-1">
       <button type="submit" mat-raised-button color="primary" class="btn-block"
-              (click)="logout()">{{ _translation('Logout', langCode) }}</button>
+              (click)="logout()">{{ _translation('Logout', langCode) }}
+      </button>
       <div class="mt-1 copyright">
         Copyright
         <i class="material-icons">
