--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -25,7 +25,8 @@
     </div>
     <div class="col-md-5 col-sm-9">
       <mat-form-field class="w-100">
-        <input matInput [matDatepicker]="pickerFrom" [(ngModel)]="dateFrom" placeholder="{{ _translation('Date from', langCode) }}" disabled
+        <input matInput [matDatepicker]="pickerFrom" [(ngModel)]="dateFrom"
+               placeholder="{{ _translation('Date from', langCode) }}" disabled
                (dateChange)="onChange($event, 'dateFrom')">
         <mat-datepicker-toggle matSuffix [for]="pickerFrom"></mat-datepicker-toggle>
         <mat-datepicker touchUi #pickerFrom disabled="false"></mat-datepicker>
@@ -33,12 +34,14 @@
     </div>
     <div class="col-md-1 col-sm-3">
       <div class="text-right p-1">
-        <button type="button" mat-raised-button color="primary" class="btn-block" (click)="clearDateFrom()">{{ _translation('Clear', langCode) }}</button>
+        <button type="button" mat-raised-button color="primary" class="btn-block"
+                (click)="clearDateFrom()">{{ _translation('Clear', langCode) }}</button>
       </div>
     </div>
     <div class="col-md-5 col-sm-9">
       <mat-form-field class="w-100">
-        <input matInput [matDatepicker]="pickerTo" [(ngModel)]="dateTo" placeholder="{{ _translation('Date to', langCode) }}" disabled
+        <input matInput [matDatepicker]="pickerTo" [(ngModel)]="dateTo"
+               placeholder="{{ _translation('Date to', langCode) }}" disabled
                (dateChange)="onChange($event, 'dateTo')">
         <mat-datepicker-toggle matSuffix [for]="pickerTo"></mat-datepicker-toggle>
         <mat-datepicker touchUi #pickerTo disabled="false"></mat-datepicker>
@@ -46,11 +49,12 @@
     </div>
     <div class="col-md-1 col-sm-3">
       <div class="text-right p-1">
-        <button type="button" mat-raised-button color="primary" class="btn-block" (click)="clearDateTo()">{{ _translation('Clear', langCode) }}</button>
+        <button type="button" mat-raised-button color="primary" class="btn-block"
+                (click)="clearDateTo()">{{ _translation('Clear', langCode) }}</button>
       </div>
     </div>
   </div>
-  <div class="row pr-1 pl-1" *ngIf="bills">
+  <div class="row pr-1 pl-1" *ngIf="bills && bills.bills.length > 0">
     <div class="col-md-3 col-sm-12">
       <p>{{ _translation('Min cost', langCode) }}: {{bills?.min_cost}}</p>
     </div>
@@ -71,12 +75,12 @@
     </div>
   </div>
 </div>
-<div class="mobileGraph">
-  <fusioncharts *ngIf="bills"
-                [type]="type"
-                [width]="width"
-                [height]="height"
-                [dataSource]="dataSource"
+<div class="mobileGraph" *ngIf="bills && bills.bills.length > 0">
+  <fusioncharts
+    [type]="type"
+    [width]="width"
+    [height]="height"
+    [dataSource]="dataSource"
   >
   </fusioncharts>
 </div>
