--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -6,14 +6,14 @@
 >
   <!--<p style="font-size: 20px; color: white">Loading...</p>-->
 </ngx-spinner>
-<div class="settings p-2">
+<div class="application p-2">
   <div>
     <!--<h5 class="text-center">{{ _translation('Application rating', langCode) }}</h5>-->
     <!--<bar-rating [(rate)]="rate" [max]="5"></bar-rating>-->
     <div class="row">
       <div class="col-md-5 col-sm-4"></div>
       <div class="col-md-2 col-sm-4">
-        <h5>{{ _translation('Application rating', langCode) }}</h5>
+        <h5 class="text-center">{{ _translation('Application rating', langCode) }}</h5>
         <div class="m-auto">
           <bar-rating [rate]="rate" [max]="5" class="ratingBar" (rateChange)="changeRating($event)"></bar-rating>
         </div>
@@ -21,4 +21,19 @@
       <div class="col-md-5 col-sm-4"></div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-6 col-sm-12 p-1">
+      <button type="button" mat-raised-button color="primary" class="btn-block newBillButton" (click)="redirectToBugs()">
+        <i class="material-icons">bug_report</i>
+        {{ _translation('Bugs', langCode)}}
+      </button>
+    </div>
+    <div class="col-md-6 col-sm-12 p-1">
+      <button type="button" mat-raised-button color="primary" class="btn-block newBillButton" (click)="redirectToSuggestions()">
+        <i class="material-icons">question_answer</i>
+        {{ _translation('Suggestions', langCode)}}
+      </button>
+    </div>
+  </div>
+  <router-outlet></router-outlet>
 </div>
