login_and_register_design_changes

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
 >
   <!--<p style="font-size: 20px; color: white">Loading...</p>-->
 </ngx-spinner>
-<div class="row" xmlns="http://www.w3.org/1999/html">
+<div class="row">
   <div class="col-md-1 col-sm-12 p-1">
     <mat-form-field class="w-90">
       <mat-label>{{ _translation('Language', langCode) }}</mat-label>
