--- a/src/custom.scss
+++ b/src/custom.scss
@@ -164,3 +164,28 @@ $colums: 12;
 .decorationText {
   text-decoration: underline;
 }
+
+body {
+  background-color: #0B0C10;
+  color: #66FCF1;
+  a {
+    color: #66FCF1;
+  }
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: unset;
+  -webkit-text-fill-color: #66FCF1;
+  -webkit-box-shadow: 0 0 0px 1000px #0B0C10 inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+
