--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -52,9 +52,58 @@
 }
 
 .red {
-  color: darkred;
+  color: #F44336;
 }
 
 .green {
-  color: green;
+  color: #66FCF1;
+}
+
+/deep/ svg {
+  color: #66FCF1 !important;
+}
+
+button {
+  border-radius: 50px;
+  background-color: #1F2833 !important;
+  color: #66FCF1 !important;
+}
+
+/deep/ .mat-form-field.mat-focused .mat-form-field-label {
+  color: #66FCF1 !important;
+}
+
+/deep/ .mat-form-field-appearance-legacy .mat-form-field-label {
+  color: #66FCF1 !important;
+}
+
+/deep/ .mat-form-field.mat-form-field-invalid .mat-form-field-label {
+  color: #F44336 !important;
+}
+
+/deep/ .cdk-overlay-pane {
+  @media (max-width: 767px) {
+    min-width: unset !important;
+    width: 85% !important;
+  }
+}
+
+/deep/ .mat-select-value {
+  color: #66FCF1 !important;
+}
+
+/deep/ .mat-form-field.mat-focused .mat-form-field-ripple {
+  background-color: #66FCF1 !important;
+}
+
+/deep/ .mat-select-arrow-wrapper {
+  background-color: #66FCF1 !important;
+}
+
+/deep/ .mat-progress-bar-fill::after {
+  background-color: #45A29E !important;
+}
+
+/deep/ .mat-input-element:disabled {
+  color: #66FCF1 !important;
 }
